# UCAS-CP-Lab-2023

./: .gitignore  11_true_unaop.c  11_true_unaop.s  CMakeLists.txt  IR.cpp  IR.h  a.out  compiler  gen_asm.sh  gen_asm_ref.sh  gen_elf.sh  gen_elf_ref.sh  gen_ref.sh  ignore-deps.sh  m2s.sh  myenv.sh  rebuild.sh  s2m.sh  test.sh  try.c
IRC/: 00_true_use_after_decl.cact.txt  04_true_while_same_name.cact.txt  04_true_while_same_name.txt  07_false_global_exp.cact.txt  08_true_int_init.cact.txt  11_true_unaop.cact.txt  14_true_assignment.cact.txt  14_true_assignment.txt  17_true_simple_if_else.cact.txt  17_true_simple_if_else.txt  20_true_builtin_func.cact.txt  22_true_no_arg_func.cact.txt  26_true_void_func_stmt.cact.txt  32_true_int_float_init.cact.txt  34_true_multidim_init.cact.txt  35_true_float_multidim_call.cact.txt  35_true_float_multidim_call.txt  38_true_same_name.cact.txt  38_true_same_name.txt  array.c.txt  dc.txt  ex.c.txt  fib_subseq.S.txt  fib_subseq.txt  fib_subseq0.txt  fib_subseq_ndag.txt  fib_subseq_ndc.txt  init.txt  matrix.txt  matrix0.txt  matrix_ndc.txt  read_int.txt  tim_sort.S.txt  tim_sort.txt  tim_sort0.txt  tim_sort_ndag.txt
asm/: fib_subseq.S  matrix.S  tim_sort.S
asm_bkp/: fib_subseq.S  matrix.S  tim_sort.S
asm_gen/: fib_subseq.S  matrix.S  tim_sort.S
asm_ref/: 00_true_use_after_decl.S  04_true_while_same_name.S  08_true_int_init.S  14_true_assignment.S  17_true_simple_if_else.S  20_true_builtin_func.S  22_true_no_arg_func.S  26_true_void_func_stmt.S  32_true_int_float_init.S  34_true_multidim_init.S  35_true_float_multidim_call.S  array.S  (+5 more)
(+99 files in other folders)
